...
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp">

        <EditText
            android:id="@+id/et_command"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:hint="@string/msgFieldHint"
            android:imeOptions="actionSend"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/btnSend" />
    </LinearLayout>
</LinearLayout>
